--- a/package.json
+++ b/package.json
@@ -3,6 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emotion/react": "^11.13.3",
+    "@emotion/styled": "^11.13.0",
+    "@mui/base": "^5.0.0-beta.58",
+    "@mui/icons-material": "^6.1.1",
+    "@mui/material": "^6.1.1",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -10,8 +15,10 @@
     "@types/node": "^16.18.109",
     "@types/react": "^18.3.9",
     "@types/react-dom": "^18.3.0",
+    "classnames": "^2.5.1",
     "mobx": "^6.13.3",
     "mobx-react-lite": "^4.0.7",
+    "notistack": "^3.0.1",
     "react": "^18.3.1",
     "react-dnd": "^16.0.1",
     "react-dnd-html5-backend": "^16.0.1",
